# api/server/swagger_server/models/__init__.py
@@ -7,6 +7,4 @@ from swagger_server.models.author import Author
 from swagger_server.models.inline_response200 import InlineResponse200
 from swagger_server.models.paging_info import PagingInfo
 from swagger_server.models.paper import Paper
-from swagger_server.models.reviewing_service_collection import ReviewingServiceCollection
-from swagger_server.models.reviewing_service_collection_inner import ReviewingServiceCollectionInner
 from swagger_server.models.reviewing_service_description import ReviewingServiceDescription
