# api/server/swagger_server/models/reviewing_service_collection_inner.py
@@ -1,89 +1,0 @@
-# coding: utf-8
-
-from __future__ import absolute_import
-from datetime import date, datetime  # noqa: F401
-
-from typing import List, Dict  # noqa: F401
-
-from swagger_server.models.base_model_ import Model
-from swagger_server.models.reviewing_service_description import ReviewingServiceDescription  # noqa: F401,E501
-from swagger_server import util
-
-
-class ReviewingServiceCollectionInner(Model):
-    """NOTE: This class is auto generated by the swagger code generator program.
-
-    Do not edit the class manually.
-    """
-    def __init__(self, id: str=None, reviewing_service_description: ReviewingServiceDescription=None):  # noqa: E501
-        """ReviewingServiceCollectionInner - a model defined in Swagger
-
-        :param id: The id of this ReviewingServiceCollectionInner.  # noqa: E501
-        :type id: str
-        :param reviewing_service_description: The reviewing_service_description of this ReviewingServiceCollectionInner.  # noqa: E501
-        :type reviewing_service_description: ReviewingServiceDescription
-        """
-        self.swagger_types = {
-            'id': str,
-            'reviewing_service_description': ReviewingServiceDescription
-        }
-
-        self.attribute_map = {
-            'id': 'id',
-            'reviewing_service_description': 'reviewing_service_description'
-        }
-        self._id = id
-        self._reviewing_service_description = reviewing_service_description
-
-    @classmethod
-    def from_dict(cls, dikt) -> 'ReviewingServiceCollectionInner':
-        """Returns the dict as a model
-
-        :param dikt: A dict.
-        :type: dict
-        :return: The ReviewingServiceCollection_inner of this ReviewingServiceCollectionInner.  # noqa: E501
-        :rtype: ReviewingServiceCollectionInner
-        """
-        return util.deserialize_model(dikt, cls)
-
-    @property
-    def id(self) -> str:
-        """Gets the id of this ReviewingServiceCollectionInner.
-
-
-        :return: The id of this ReviewingServiceCollectionInner.
-        :rtype: str
-        """
-        return self._id
-
-    @id.setter
-    def id(self, id: str):
-        """Sets the id of this ReviewingServiceCollectionInner.
-
-
-        :param id: The id of this ReviewingServiceCollectionInner.
-        :type id: str
-        """
-
-        self._id = id
-
-    @property
-    def reviewing_service_description(self) -> ReviewingServiceDescription:
-        """Gets the reviewing_service_description of this ReviewingServiceCollectionInner.
-
-
-        :return: The reviewing_service_description of this ReviewingServiceCollectionInner.
-        :rtype: ReviewingServiceDescription
-        """
-        return self._reviewing_service_description
-
-    @reviewing_service_description.setter
-    def reviewing_service_description(self, reviewing_service_description: ReviewingServiceDescription):
-        """Sets the reviewing_service_description of this ReviewingServiceCollectionInner.
-
-
-        :param reviewing_service_description: The reviewing_service_description of this ReviewingServiceCollectionInner.
-        :type reviewing_service_description: ReviewingServiceDescription
-        """
-
-        self._reviewing_service_description = reviewing_service_description
